@@ -1,4 +1,5 @@
 version 0.6.0 - currently working on
+- [#1644] Change: Removed the requirement for bidirectional extension
 - [#1732] Feature: Added field for XING Profile link
 - [#1741] Fix: Deleted team records with relations caused wrong output in pi1
 - [#1013] Change: List view now respects the startinpoint
